@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 31-03-2005 fixed: kai toast dialog only shows the last notification in the queue
   - 31-03-2005 added: New built-in command XBMC.ReloadSkin()
   - 31-03-2005 fixed: Several translation strings in My Weather.
   - 31-03-2005 added: support for MusicBrainz id's from ogg and mp3 tags
